[append] add content about route and prefetch

--- a/历年考试答案总结.md
+++ b/历年考试答案总结.md
@@ -1,4 +1,5 @@
 # MESI和Dragon协议
+
 ## 2007
 r1, r1, r1, r2, r2, r2, r3, r3, r3, w1, w1, w1, w2, w1, w1, w3, r3
 
@@ -80,5 +81,20 @@ $$000111, 001011, 001111, 010111, 011011, 011111, 100111, 101011, 101111, 110111
 > - $y * n + x$ $y$为偶数
 > - $y * n + n - x - 1$ $y$为奇数
 
+![image-20230618145533475](./历年考试答案总结.assets/image-20230618145533475.png)
 
+# 预取
 
+## 2007
+
+> 纯靠经验，没有技巧，建议多推测
+
+​    T1  T2  T3  T4  T5  T6  T7  T8  T9  T10 T11
+
+​            F1      A1  B2  C1  D2  E1      F1
+
+b1  **F1**  **F1**  F1  F1  **C1**  **C1**  C1  C1  **F1**  **F1**  F1
+
+b2  **B2**  **B2**  B2  B2  B2  B2  **E1**  **E1**  E1  E1  E1
+
+b3          A1  **A1**  A1  **D2**  **D2**  D2  D2  D2  D2
