[append] add content about some questions in 2008

--- a/历年考试答案总结.md
+++ b/历年考试答案总结.md
@@ -1,3 +1,62 @@
+# 基础
+
+## 请描述并行计算机中主要的访存结构模型
+
+> 第一版P36-P38
+
+- UMA:均匀存储访问模型，所有处理机访问任何存储字取相同的时间
+- NUMA:非均匀存储访问模型，处理器访问存储器的时间不同，访问本地存储器或者群内共享存储器较快，访问外地存储器或者全局共享存储器较慢
+- COMA:全高速缓存存储访问，NUMA的一种特例，各个处理器节点没有存储层次结构，全部高速缓存组成了全局地址空间，利用分布的高速缓存目录进行远程高速缓存的访问
+- CC-NUMA:高速缓存一致性非均匀存储访问模型，基于高速缓存一致性协议
+- NORMA:非远程存储访问模型，所有的存储器均为私有，只能自己访问
+
+## 请比较可扩放性评价中的集中评价标准
+
+> 第一版P128
+
+等效率是效率不变的前提下研究问题规模随处理器数的变化；等速度是在保持平均速度不变的前提下研究处理器数增多的时候应当对应增加的工作量；平均延迟标准是在效率不变的前提下，用平均延迟的比值来标志随着处理器数增加需要增加的工作量。
+
+三者的基本出发点均为抓住影响算法可扩放性的基本参数$T_o$。等效率使用解析计算的方式得到；等速度将$T_o$隐藏到所测量的执行时间中；平均延迟则是保持效率为恒定值，通过调节W和P来测量并行和串行的执行时间，最终通过平均延迟反应得到$T_o$。
+
+故等速度和平均延迟标准均辅之以测试手段得到有关参数；等效率标准通过解析计算$T_o$。
+
+> 缩写by ChatGPT:等效率、等速度、平均延迟标准分别研究问题规模随处理器数变化、处理器数增多应对应增加的工作量、随处理器数增加需要增加的工作量，均以$T_o$为基本参数。等效率使用解析计算，等速度将$T_o$隐藏到执行时间中，平均延迟通过调节W和P测量并行和串行执行时间，最终反应$T_o$。等速度和平均延迟标准通过测试手段得到有关参数，等效率标准通过解析计算$T_o$。
+
+## 请描述并行程序设计中任务划分的几种主要方法
+
+> P139
+
+- 域分解：也叫数据划分，所要划分的对象为数据，这些数据可以是算法的输入、计算的输出或者中间结果。域分解的步骤为：首先分解与问题相关的数据，在可能的情况下使得这些小的数据片尽可能大致相等；再将每个计算关联到它所操作的数据上。这样划分产生一系列任务，每个任务包括一些数据及其上的操作
+- 功能分解：也被成为任务分解或者计算划分。首先关注被执行的计算；然后如果所做的计算划分是成功的，再继续研究计算所需的数据，若数据基本不相交则意味着划分成功；若数据具有相当的重叠，意味着必然有大量的通信，应当考虑数据分解。
+
+## 请给出最小北向最后后算法
+
+## 请举例为何下图所示网络不是非阻塞网络
+
+<img src="./历年考试答案总结.assets/image-20230618153843494.png" alt="image-20230618153843494" style="zoom:50%;" />
+
+> 本题的解法只需要找到一对冲突的输入/输出即可
+
+在本题中，存在冲突的为$000\to 110$和$110\to 111$
+
+## 请比较基于侦听的高速缓存一致性协议与基于目录的高速缓存一致性协议
+
+- 侦听一致性协议利用了总线的两个特性：所有总线上的事务对所有的高速缓存控制器都是可见的；它们对所有的控制器都以相同的次序可见。该协议利用了在单机体系结构中已经存在的两个基本因素：总线事务和高速缓存块相关的状态转换图。该协议不适用于大型多处理机系统中，因为在多级互联网络中实习广播的代价很大
+- 基于目录的高速缓存一致性协议通过维护一个全局目录，每次需要通过一致性命令来维护高速缓存一致性时利用全局目录只把一致性命令发送给特定的节点从而实现一致性协议。该协议可以通过将目录分布到各个节点上防止其成为瓶颈。
+
+## 请描述SMP中不同的锁机制
+
+- 简单的软件锁算法通过处理器指令集中支持的某种原子指令来实现的。最为典型的就是原子交换指令。例如使用Test&Set指令、Swap指令、Fetch&Op指令等来对一个特定的锁变量进行修改从而实现。现代的微处理器还支持LL和SC从而实现对一个变量的原子IO操作
+- 简单的锁算法存在性能问题，故有了Test&Set lock with Backoff，降低Test&Set的发出频率，通过在两条Test&Set指令之间插入一个延迟时间进行实现或者通过Test-and-Test&Set实现，在忙等待的时候只使用Load读取锁变量的值，只有在读取到锁释放的时候才使用Test&Set去获取锁
+- 更加先进的锁算法包括票锁，即每个锁进程持有一个票号，忙等待一个全局的Now-serving，只有Now-serving与自己的票号相同才能得到锁。且没有一个进程释放锁，Now-serveing才会+1。基于数组的锁通过Fetch&Increment指令去获得忙等待的一个位置，当锁释放的时候下一个位置上在忙等待的处理器将会通过读缺失知道自己获得了锁
+- 全硬件的方式同样可以实现锁。
+
+## 请描述基本的故障恢复测量，并具体说明何为非一致的全局检查点
+
+故障恢复策略包括向后恢复，即恢复到上一个checkpoint和向前恢复，即利用日志重建状态。非一致的全局检查点即所有的进程独立进行检查点操作，各自设置检查点的时间完全独立。
+
+
+
 # MESI和Dragon协议
 
 ## 2007
